buildscript {

    ext.commonProps = new Properties()
    file(new File(project.rootProject.projectDir,"config/common.properties")).withInputStream { commonProps.load(it) }
}

plugins {
    // id 'my-plugin' apply false
}

allprojects {

    apply plugin: 'java'
    
    sourceCompatibility = 11
    targetCompatibility = 11
    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'


    tasks.withType(Javadoc) {
        options.addStringOption('Xdoclint:none', '-quiet')
        options.encoding = 'UTF-8'
    }
    
    // compileTestJava.options.compilerArgs.add("--enable-preview")
    // compileTestJava.options.compilerArgs.add("-Xlint:preview")

    test {
        // jvmArgs=['--enable-preview']
        failFast = false
    }
}


wrapper {
    gradleVersion = '6.5'
}
